<?xml version="1.0" encoding="utf-8"?>
<!--Student ID: 301170707-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlexanderActivity">

    <!--Title for the application-->
    <TextView
        android:id="@+id/activity_alexander_brain_challenge_title"
        style="@style/title_text_view"
        android:text="@string/brain_challenge_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Description of the application-->
    <TextView
        android:id="@+id/activity_alexander_brain_challenge_description"
        style="@style/description_text_view"
        android:text="@string/brain_challenge_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_alexander_brain_challenge_title" />

    <!--Image view for this activity-->
    <ImageView
        android:id="@+id/activity_alexander_brain_challenge_image_view"
        style="@style/brain_challenge_app_logo"
        android:contentDescription="@string/brain_challenge_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_alexander_brain_challenge_description"
        tools:ignore="ImageContrastCheck"/>

    <!--Image button for this activity-->
    <ImageButton
        android:id="@+id/activity_alexander_brain_challenge_image_btn"
        style="@style/image_button"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:background="@drawable/brain_challenge_select_exercises"
        android:contentDescription="@string/brain_challenge_image_btn_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_alexander_brain_challenge_image_view"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>